--- a/Pages/dashboard.html
+++ b/Pages/dashboard.html
@@ -61,6 +61,31 @@
                         <td>Igor SHYAKA</td>
                         <td>Posted a job</td>
                     </tr>
+                    <tr>
+                      <td>2024-05-03</td>
+                      <td>Ivanna GWIZA</td>
+                      <td>Did assessment</td>
+                  </tr>
+                  <tr>
+                    <td>2024-04-11</td>
+                    <td>Winny ISHEJA</td>
+                    <td>Applied for a job</td>
+                </tr>
+                <tr>
+                  <td>2024-07-28</td>
+                  <td>Bill NICHOLAS</td>
+                  <td>Updated profile</td>
+              </tr>
+              <tr>
+                <td>2024-07-17</td>
+                <td>Ines IKIREZI</td>
+                <td>Did assessment </td>
+            </tr>
+            <tr>
+              <td>2024-07-20</td>
+              <td>Kelly ISHIMWE</td>
+              <td>Posted a job</td>
+          </tr>
                 </tbody>
             </table>
         </div>
