--- a/Pages/login.html
+++ b/Pages/login.html
@@ -13,7 +13,7 @@
     <div class="login-container">
       <form action="#" id="login-form">
         <h2>HELLO! WELCOME BACK</h2>
-        <label for="username">FirstName</label>
+        <label for="username">UserName</label>
         <input type="text" id="username" name="username" required />
 
         <label for="password">Password</label>
