--- a/Pages/signup.html
+++ b/Pages/signup.html
@@ -13,7 +13,7 @@
       <div id="side-image">
         <!-- <img src="/Images/signup.jpg"> -->
         <p class="title">CREATE YOUR ACCOUNT!!</p>
-        <p class="word">Hello! Employee <br> Start your registration <span style="color: yellow;"> here</span>.</p>
+        <p class="word">Hello! Employee <br> Start your registration <span style="color:chocolate;"> here</span>.</p>
       </div> 
       <div id="form">
         <div id="toast-container" class="toast-container"></div>
