--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <a href="#">Home</a>
             <a href="#about">About us</a>
             <a href="#our">Our Team</a>
-            <a href="#faq">F.A.Q</a>
+            <!-- <a href="#faq">F.A.Q</a> -->
             <a href="#contact">Contact</a>
            </div>
               
