--- a/Pages/job.html
+++ b/Pages/job.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="job.css">
 </head>
 <body>
-    <div class="container">
+    <div class="container" id="job">
         <header>
             <h1>Available Jobs</h1>
         </header>
@@ -17,107 +17,119 @@
                 <p>Location: Nairobi, Kenya</p>
                 <p>Company: Tech Innovators</p>
                 <p>Description: Looking for an experienced software developer with knowledge in Python and JavaScript.</p>
-                <a href="#" class="apply-btn">Apply Now</a>
+                <a href="https://forms.gle/o8LQWRDu9LUbufrt7" class="apply-btn">Apply Now</a>
             </div>
             <div class="job">
                 <h2>Marketing Specialist</h2>
                 <p>Location: Lagos, Nigeria</p>
                 <p>Company: Market Masters</p>
                 <p>Description: Seeking a creative marketing specialist with experience in digital marketing.</p>
-                <a href="#" class="apply-btn">Apply Now</a>
+                <a href="https://forms.gle/o8LQWRDu9LUbufrt7" class="apply-btn">Apply Now</a>
             </div>
             <div class="job">
                 <h2>Data Analyst</h2>
                 <p>Location: Johannesburg, South Africa</p>
                 <p>Company: Data Insights</p>
                 <p>Description: Data analyst needed with strong skills in SQL and data visualization tools.</p>
-                <a href="#" class="apply-btn">Apply Now</a>
+                <a href="https://forms.gle/o8LQWRDu9LUbufrt7" class="apply-btn">Apply Now</a>
             </div>
             <div class="job">
                 <h2>Project Manager</h2>
                 <p>Location: Accra, Ghana</p>
                 <p>Company: Project Solutions</p>
                 <p>Description: Experienced project manager needed for managing large-scale infrastructure projects.</p>
-                <a href="#" class="apply-btn">Apply Now</a>
+                <a href="https://forms.gle/o8LQWRDu9LUbufrt7" class="apply-btn">Apply Now</a>
             </div>
             <div class="job">
                 <h2>Graphic Designer</h2>
                 <p>Location: Cairo, Egypt</p>
                 <p>Company: Creative Studios</p>
                 <p>Description: Talented graphic designer with skills in Adobe Creative Suite required.</p>
-                <a href="#" class="apply-btn">Apply Now</a>
+                <a href="https://forms.gle/o8LQWRDu9LUbufrt7" class="apply-btn">Apply Now</a>
             </div>
             <div class="job">
                 <h2>Financial Analyst</h2>
                 <p>Location: Casablanca, Morocco</p>
                 <p>Company: Finance Experts</p>
                 <p>Description: Financial analyst with expertise in financial modeling and analysis needed.</p>
-                <a href="#" class="apply-btn">Apply Now</a>
+                <a href="https://forms.gle/o8LQWRDu9LUbufrt7" class="apply-btn">Apply Now</a>
             </div>
             <div class="job">
                 <h2>Customer Service Representative</h2>
                 <p>Location: Kampala, Uganda</p>
                 <p>Company: Customer Care Co.</p>
                 <p>Description: Friendly and professional customer service representative required.</p>
-                <a href="#" class="apply-btn">Apply Now</a>
+                <a href="https://forms.gle/o8LQWRDu9LUbufrt7" class="apply-btn">Apply Now</a>
             </div>
             <div class="job">
                 <h2>IT Support Technician</h2>
                 <p>Location: Addis Ababa, Ethiopia</p>
                 <p>Company: Tech Support Services</p>
                 <p>Description: IT support technician with experience in network troubleshooting needed.</p>
-                <a href="#" class="apply-btn">Apply Now</a>
+                <a href="https://forms.gle/o8LQWRDu9LUbufrt7" class="apply-btn">Apply Now</a>
             </div>
             <div class="job">
                 <h2>Human Resources Manager</h2>
                 <p>Location: Dakar, Senegal</p>
                 <p>Company: HR Solutions</p>
                 <p>Description: HR manager with experience in recruitment and employee relations required.</p>
-                <a href="#" class="apply-btn">Apply Now</a>
+                <a href="https://forms.gle/o8LQWRDu9LUbufrt7" class="apply-btn">Apply Now</a>
             </div>
             <div class="job">
                 <h2>Content Writer</h2>
                 <p>Location: Lusaka, Zambia</p>
                 <p>Company: Writing Pros</p>
                 <p>Description: Creative content writer with excellent writing skills needed.</p>
-                <a href="#" class="apply-btn">Apply Now</a>
+                <a href="https://forms.gle/o8LQWRDu9LUbufrt7" class="apply-btn">Apply Now</a>>
             </div>
             <div class="job">
                 <h2>Sales Executive</h2>
                 <p>Location: Dar es Salaam, Tanzania</p>
                 <p>Company: Sales Gurus</p>
                 <p>Description: Dynamic sales executive with a proven track record in sales required.</p>
-                <a href="#" class="apply-btn">Apply Now</a>
+                <a href="https://forms.gle/o8LQWRDu9LUbufrt7" class="apply-btn">Apply Now</a>
             </div>
             <div class="job">
                 <h2>Business Analyst</h2>
                 <p>Location: Abidjan, Ivory Coast</p>
                 <p>Company: Business Solutions</p>
                 <p>Description: Business analyst with experience in process improvement and strategy needed.</p>
-                <a href="#" class="apply-btn">Apply Now</a>
+                <a href="https://forms.gle/o8LQWRDu9LUbufrt7" class="apply-btn">Apply Now</a>
             </div>
             <div class="job">
                 <h2>Operations Manager</h2>
                 <p>Location: Harare, Zimbabwe</p>
                 <p>Company: Operations Experts</p>
                 <p>Description: Operations manager with strong leadership skills required.</p>
-                <a href="#" class="apply-btn">Apply Now</a>
+                <a href="https://forms.gle/o8LQWRDu9LUbufrt7" class="apply-btn">Apply Now</a>
             </div>
             <div class="job">
                 <h2>Web Developer</h2>
                 <p>Location: Kigali, Rwanda</p>
                 <p>Company: Web Solutions</p>
                 <p>Description: Web developer with experience in front-end and back-end development needed.</p>
-                <a href="#" class="apply-btn">Apply Now</a>
+                <a href="https://forms.gle/o8LQWRDu9LUbufrt7" class="apply-btn">Apply Now</a>
             </div>
             <div class="job">
                 <h2>Electrical Engineer</h2>
                 <p>Location: Tunis, Tunisia</p>
                 <p>Company: Engineering Solutions</p>
                 <p>Description: Electrical engineer with experience in power systems required.</p>
-                <a href="#" class="apply-btn">Apply Now</a>
+                <a href="https://forms.gle/o8LQWRDu9LUbufrt7" class="apply-btn">Apply Now</a>
             </div>
         </div>
     </div>
+    <script>
+        function checkRegistration(event) {
+            // Example check - replace this with your actual registration check
+            const isRegistered = localStorage.getItem('isRegistered');
+
+            if (!isRegistered) {
+                event.preventDefault(); // Prevent the link from being followed
+                alert('Please register before applying for jobs.');
+                window.location.href = 'register.html'; // Redirect to registration page
+            }
+        }
+    </script>
 </body>
 </html>
