--- a/Pages/dashboard.html
+++ b/Pages/dashboard.html
@@ -4,91 +4,320 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Dashboard</title>
-    <link rel="stylesheet" href="../CSS/dashboard.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            display: flex;
+        }
+        .sidebar {
+            width: 20%;
+            background-color: chocolate;
+            height: 100vh;
+            color: white;
+            padding: 20px;
+        }
+        .sidebar h2, .sidebar ul {
+            margin: 0;
+            padding: 0;
+            list-style: none;
+        }
+        .sidebar ul li {
+            margin: 20px 0;
+            padding-top: 1.5rem;
+            cursor: pointer;
+        }
+        .sidebar .logout {
+            padding-top: 10rem;
+        }
+        .main-content {
+            width: 80%;
+            padding: 20px;
+            display: none;
+        }
+        .summary {
+            display: flex;
+            justify-content: space-between;
+            background-color: rgb(237, 219, 207);
+            padding: 10px;
+        }
+        .summary div {
+            text-align: center;
+            flex: 1;
+        }
+        .summary div:not(:last-child) {
+            border-right: 1px solid #ddd;
+        }
+        h2 {
+            margin-top: 20px;
+        }
+        table {
+            width: 100%;
+            border-collapse: collapse;
+            margin-top: 20px;
+        }
+        th, td {
+            border: 1px solid #ddd;
+            padding: 8px;
+            text-align: left;
+        }
+        th {
+            background-color: rgb(237, 219, 207);
+        }
+        .icon {
+            cursor: pointer;
+        }
+        .icon-add {
+            color: green;
+        }
+        .icon-delete {
+            color: red;
+        }
+        .list-icon {
+            margin-right: 10px;
+        }
+        
+    .btn-chocolate {
+        background-color: chocolate; 
+        color: white;
+        border: none;
+        padding: 10px 20px;
+        border-radius: 5px; 
+        cursor: pointer;
+        font-size: 16px; 
+    }
+
+    .btn-chocolate:hover {
+        background-color: chocolate;
+    }
+    </style>
 </head>
 <body>
     <div class="sidebar">
         <h2>Admin Dashboard</h2>
         <ul>
-            <li><a href="#">Dashboard</a></li>
-            <li><a href="#">Users</a></li>
-            <li><a href="#">Jobs</a></li>
-            <li><a href="#">Settings</a></li>
-            <li><a href="#">Logout</a></li>
+            <li onclick="showSection('dashboard')">
+                <span class="list-icon">&#128202;</span>Dashboard
+            </li>
+            <li onclick="showSection('users')">
+                <span class="list-icon">&#128101;</span>Users
+            </li>
+            <li onclick="showSection('jobs')">
+                <span class="list-icon">&#128188;</span>Jobs
+            </li>
+            <li onclick="showSection('settings')">
+                <span class="list-icon">&#9881;</span>Settings
+            </li>
+            <li class="logout">
+                <span class="list-icon">&#128274;</span>Logout
+            </li>
         </ul>
     </div>
-    <div class="main-content">
-        <header>
-            <h2>Welcome, Admin</h2>
-        </header>
-        <div class="cards">
-            <div class="card">
+    <div id="dashboard" class="main-content">
+        <div class="summary">
+            <div>
                 <h3>Users</h3>
-                <p>100</p>
+                <p id="user-count">100</p>
             </div>
-            <div class="card">
+            <div>
                 <h3>Jobs</h3>
-                <p>50</p>
+                <p id="job-count">50</p>
             </div>
-            <div class="card">
+            <div>
                 <h3>Applications</h3>
                 <p>150</p>
             </div>
         </div>
-        <div class="content">
-            <h2>Recent Activities</h2>
-            <table>
-                <thead>
-                    <tr>
-                        <th>Date</th>
-                        <th>User</th>
-                        <th>Activity</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>2024-07-01</td>
-                        <td>Ian ROBIN</td>
-                        <td>Applied for a job</td>
-                    </tr>
-                    <tr>
-                        <td>2024-07-02</td>
-                        <td>Lyse Maria</td>
-                        <td>Updated profile</td>
-                    </tr>
-                    <tr>
-                        <td>2024-07-03</td>
-                        <td>Igor SHYAKA</td>
-                        <td>Posted a job</td>
-                    </tr>
-                    <tr>
-                      <td>2024-05-03</td>
-                      <td>Ivanna GWIZA</td>
-                      <td>Did assessment</td>
-                  </tr>
-                  <tr>
-                    <td>2024-04-11</td>
-                    <td>Winny ISHEJA</td>
+        <h2>Recent Activities</h2>
+        <table class="table">
+            <thead>
+                <tr>
+                    <th>Date</th>
+                    <th>User</th>
+                    <th>Activity</th>
+                    <th>Action</th>
+                </tr>
+            </thead>
+            <tbody id="activity-table">
+                <tr>
+                    <td>2024-07-01</td>
+                    <td>Ian ROBIN</td>
                     <td>Applied for a job</td>
+                    <td>
+                        <span class="icon icon-add">&#43;</span>
+                        <span class="icon icon-delete" onclick="deleteRow(this)">&#x2716;</span>
+                    </td>
+                </tr>
+                <!-- Add more rows as needed -->
+            </tbody>
+        </table>
+    </div>
+    <div id="users" class="main-content">
+        <h2>Users</h2>
+        <table class="table">
+            <thead>
+                <tr>
+                    <th>ID</th>
+                    <th>Name</th>
+                    <th>Email</th>
+                    <th>Action</th>
+                </tr>
+            </thead>
+            <tbody id="users-table">
+                <tr>
+                    <td>1</td>
+                    <td>John Doe</td>
+                    <td>john@example.com</td>
+                    <td>
+                        <span class="icon icon-add">&#43;</span>
+                        <span class="icon icon-delete" onclick="deleteRow(this)">&#x2716;</span>
+                    </td>
                 </tr>
                 <tr>
-                  <td>2024-07-28</td>
-                  <td>Bill NICHOLAS</td>
-                  <td>Updated profile</td>
-              </tr>
-              <tr>
-                <td>2024-07-17</td>
-                <td>Ines IKIREZI</td>
-                <td>Did assessment </td>
-            </tr>
-            <tr>
-              <td>2024-07-20</td>
-              <td>Kelly ISHIMWE</td>
-              <td>Posted a job</td>
-          </tr>
-                </tbody>
-            </table>
+                    <td>2</td>
+                    <td>Jane Smith</td>
+                    <td>jane@example.com</td>
+                    <td>
+                        <span class="icon icon-add">&#43;</span>
+                        <span class="icon icon-delete" onclick="deleteRow(this)">&#x2716;</span>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+    <div id="jobs" class="main-content">
+        <h2>Jobs</h2>
+        <table class="table">
+            <thead>
+                <tr>
+                    <th>ID</th>
+                    <th>Job Title</th>
+                    <th>Company</th>
+                    <th>Action</th>
+                </tr>
+            </thead>
+            <tbody id="jobs-table">
+                <tr>
+                    <td>1</td>
+                    <td>Software Developer</td>
+                    <td>Tech Corp</td>
+                    <td>
+                        <span class="icon icon-add">&#43;</span>
+                        <span class="icon icon-delete" onclick="deleteRow(this)">&#x2716;</span>
+                    </td>
+                </tr>
+                <tr>
+                    <td>2</td>
+                    <td>Project Manager</td>
+                    <td>Biz Solutions</td>
+                    <td>
+                        <span class="icon icon-add">&#43;</span>
+                        <span class="icon icon-delete" onclick="deleteRow(this)">&#x2716;</span>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+    <div id="settings" class="main-content">
+        <h2>Settings</h2>
+        <div class="mb-3">
+            <label for="add-type" class="form-label">Add</label>
+            <select class="form-select" id="add-type" onchange="toggleForms()">
+                <option value="user">User</option>
+                <option value="job">Job</option>
+            </select>
+        </div>
+        <div id="user-form" class="add-form">
+            <h3>Add User</h3>
+            <form onsubmit="addUser(event)">
+                <div class="mb-3">
+                    <label for="user-name" class="form-label">Name</label>
+                    <input type="text" class="form-control" id="user-name" required>
+                </div>
+                <div class="mb-3">
+                    <label for="user-email" class="form-label">Email</label>
+                    <input type="email" class="form-control" id="user-email" required>
+                </div>
+                <button type="submit" class="btn btn-chocolate">Add User</button>
+            </form>
+        </div>
+        <div id="job-form" class="add-form" style="display: none;">
+            <h3>Add Job</h3>
+            <form onsubmit="addJob(event)">
+                <div class="mb-3">
+                    <label for="job-title" class="form-label">Job Title</label>
+                    <input type="text" class="form-control" id="job-title" required>
+                </div>
+                <div class="mb-3">
+                    <label for="job-company" class="form-label">Company</label>
+                    <input type="text" class="form-control" id="job-company" required>
+                </div>
+                <button type="submit" class="btn btn-primary">Add Job</button>
+            </form>
         </div>
     </div>
+
+    <script>
+        function showSection(sectionId) {
+            // Hide all sections
+            document.querySelectorAll('.main-content').forEach(function(section) {
+                section.style.display = 'none';
+            });
+            // Show the selected section
+            document.getElementById(sectionId).style.display = 'block';
+        }
+
+        // Show the dashboard by default
+        showSection('dashboard');
+
+        function deleteRow(btn) {
+            // Find the row to delete
+            var row = btn.parentNode.parentNode;
+            row.parentNode.removeChild(row);
+            updateCounts(); // Update user/job counts after deletion
+        }
+
+        function toggleForms() {
+            var addType = document.getElementById('add-type').value;
+            document.getElementById('user-form').style.display = addType === 'user' ? 'block' : 'none';
+            document.getElementById('job-form').style.display = addType === 'job' ? 'block' : 'none';
+        }
+
+        function addUser(event) {
+            event.preventDefault();
+            var name = document.getElementById('user-name').value;
+            var email = document.getElementById('user-email').value;
+
+            var table = document.getElementById('users-table');
+            var newRow = table.insertRow();
+            newRow.innerHTML = `<td>${table.rows.length}</td><td>${name}</td><td>${email}</td><td><span class="icon icon-add">&#43;</span><span class="icon icon-delete" onclick="deleteRow(this)">&#x2716;</span></td>`;
+            
+            document.getElementById('user-name').value = '';
+            document.getElementById('user-email').value = '';
+            updateCounts(); // Update user count
+        }
+
+        function addJob(event) {
+            event.preventDefault();
+            var title = document.getElementById('job-title').value;
+            var company = document.getElementById('job-company').value;
+
+            var table = document.getElementById('jobs-table');
+            var newRow = table.insertRow();
+            newRow.innerHTML = `<td>${table.rows.length}</td><td>${title}</td><td>${company}</td><td><span class="icon icon-add">&#43;</span><span class="icon icon-delete" onclick="deleteRow(this)">&#x2716;</span></td>`;
+
+            document.getElementById('job-title').value = '';
+            document.getElementById('job-company').value = '';
+            updateCounts(); // Update job count
+        }
+
+        function updateCounts() {
+            document.getElementById('user-count').textContent = document.getElementById('users-table').rows.length;
+            document.getElementById('job-count').textContent = document.getElementById('jobs-table').rows.length;
+        }
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
