--- a/Pages/login.html
+++ b/Pages/login.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../CSS/login.css" />
+    <link rel="stylesheet" href="./dashboard.html" />
     <title>Login Page</title>
   </head>
   <body>
@@ -13,8 +14,8 @@
     <div class="login-container">
       <form action="#" id="login-form">
         <h2>HELLO! WELCOME BACK</h2>
-        <label for="username">UserName</label>
-        <input type="text" id="username" name="username" required />
+        <label for="email">Email</label>
+        <input type="text" id="email" name="email" required />
 
         <label for="password">Password</label>
         <input type="password" id="password" name="password" required />
