--- a/x.html
+++ b/x.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="/CSS/index.css">
     <link rel="stylesheet" href="/CSS/index.css">
     <link rel="stylesheet" href="CSS/contact.css">
+    <link rel="stylesheet" href="Pages/job.css">
 
     <!-- DM sans font from google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -37,8 +38,10 @@
             <a href="#">Home</a>
             <a href="#about">About us</a>
             <!-- <a href="#our">Our Team</a> -->
-            <!-- <a href="#faq">F.A.Q</a> -->
+            <a href="../Pages/job.html">Application</a>
+
             <a href="#contact">Contact</a>
+            
            </div>
               
            <!-- Sign up / Login -->
@@ -69,7 +72,7 @@
                 </p>
                 <!-- hero buttons -->
                 <div class="hero_buttons">
-                    <a href="" class="blue">Know more</a>
+                    <a href="#about" class="blue">Know more</a>
                     <a href="./Pages/signup.html" class="yellow">Get Started</a>
                 </div>
              </div>
